[project]
name = "algosearch-visualizer"
version = "0.1.0"
description = "算法查找可视化分析器 - 交互式查找过程可视化和多算法性能基准测试工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
]
